# plx

./: .gitignore  README.md  pyproject.toml
examples/: batch_mix.py  batch_mix_v2.py  inheritance_test.py
src/plx/export/: __init__.py  st.py
src/plx/framework/: __init__.py  _compilation_helpers.py  _compiler.py  _compiler_expressions.py  _compiler_sentinels.py  _compiler_statements.py  _data_types.py  _decorators.py  _descriptors.py  _discover.py  _global_vars.py  _project.py  _protocols.py  _sfc.py  _types.py
src/plx/model/: __init__.py  expressions.py  hardware.py  pou.py  project.py  sfc.py  statements.py  task.py  types.py  variables.py
src/plx/simulate/: __init__.py  _builtins.py  _context.py  _executor.py  _values.py
tests/: conftest.py  test_compiler_calls.py  test_compiler_errors.py  test_compiler_expressions.py  test_compiler_statements.py  test_data_types.py  test_decorators.py  test_descriptors.py  test_discover.py  test_export_st.py  test_global_vars.py  test_inheritance.py  test_ir_validators.py  test_methods.py  test_network_comments.py  test_program_bottling.py  test_program_hvac.py  test_program_pumping.py  test_project.py  test_real_programs.py  test_sfc.py  test_sfc_simulator.py  test_sim_api.py  test_sim_builtins.py  test_sim_context.py  test_sim_executor.py  test_sim_integration.py  test_sim_values.py  test_smoke.py  test_tasks.py  test_time_literals.py  test_type_constructors.py
tests/fixtures/sample_project/: __init__.py  tasks.py  types.py
tests/fixtures/sample_project/conveyors/: belt.py  roller.py
(+1 files in other folders)
