[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plx"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["pydantic>=2.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "hypothesis>=6.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/plx"]

[tool.pytest.ini_options]
testpaths = ["tests"]
